--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <% end %>
       
       <% if flash[:alert] %>
-        <div class="notification is-danger">
+        <div class="notification is-danger">Notification クラス：ユーザー通知を表示したり、通知に応答したりするための Windows CE の機能を実装します。
           <p class="alert"><%= alert %></p>
         </div>
       <% end %>
